force-app/main/default/objects/Booking_Verification_Template_Item__c/Booking_Verification_Template_Item__c.object-meta.xml
<CustomObject>
    <description>Defines an individual line item within a Booking Verification Template. Task-type items generate BV Checklist Items; Document-type items generate Document Checklist Items linked to the BV Checklist.</description>
    <label>Booking Verification Template Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Verification Template Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>