force-app/main/default/objects/Booking_Verification_Template_Item__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Must exactly match a DocumentType__c picklist value on Document_Checklist__c. Determines the Document Type value set on the generated Document Checklist Item.</description>
    <label>Document Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>