force-app/main/default/objects/Booking_Verification_Template_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking_Verification_Template__c</columns>
    <columns>Type__c</columns>
    <columns>Is_Mandatory__c</columns>
    <columns>Sequence_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>